v4.0.2 release - Fix compatibility issues with Nuxt.js - Fixed the issue with Drawer closing. - Optimized the Slider component (justified alignment). - Added new Anchor and AnchorLink components. - Added new AvatarGroup component. - Fixed Carousel (v-for bugs). - Enhanced the POP series of components.

--- a/components/slider/styles/index.less
+++ b/components/slider/styles/index.less
@@ -24,16 +24,14 @@
     user-select: none;
     touch-action: none;
     -webkit-touch-callout: none;
-    box-shadow:
-      0 4px 6px rgb(0 0 0 / 10%),
-      0 0 1px rgb(0 0 0 / 30%);
+    box-shadow:var(--kui-color-border-shadow);
 
     margin: 0;
     border: none;
     border-radius: 10px;
     position: absolute;
     cursor: grab;
-    background: var(--kui-color-bg);
+    background: #fff;
     top: 50%;
     outline: 2px solid transparent;
     outline-offset: 1px;
