--- a/components/styles/less-var.less
+++ b/components/styles/less-var.less
@@ -4,6 +4,8 @@
 @cardRadius: 10px;
 @component-shadow: 0 0 2px @main-9;
 @pop-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+@border-shadow:0 4px 6px rgba(0, 0, 0, 0.1),0 0 1px rgba(0, 0, 0, 0.3);
+@dark-border-shadow:0 4px 6px rgba(255, 255, 255, 0.1),0 0 1px rgba(255, 255, 255, 0.3);
 
 // --- 功能色体系 ---
 @main: #54a9ff;
